# task-manager

./: Main.hs  README.md  tasks.cabal
System/: Tasks.hs
System/Tasks/: IO.hs  Manager.hs  Pretty.hs  Task.hs  Types.hs
