Name:                tasks
Version:             0.1
Synopsis:            Manage a set of processes
License:             BSD3
Author:              David Fox <dsf@seereason.com>
Maintainer:          David Fox <dsf@seereason.com>
Copyright:           2014 David Fox, SeeReason Partners LLC
Category:            System
Build-type:          Simple
Cabal-version:       >=1.9

flag local-process-listlike
   Description: Link directly to the source of the process-listlike library
   Default: False
   Manual: True

flag debug-output
   Description: Write output that illustrates the message passing
   Default: False
   Manual: True

source-repository head
    type:     darcs
    location: http://src.seereason.com/tasks

Library
  Hs-Source-Dirs:      .
  Exposed-modules:     System.Tasks
                       System.Tasks.Pretty
                       System.Tasks.Types
  Build-depends:       base >= 4 && <5, bytestring, containers, mtl, prettyclass, process, text
  if flag(local-process-listlike)
    Hs-Source-Dirs: ../process-listlike
    Build-Depends: deepseq, ListLike
  else
    Build-depends: process-listlike >= 1.3
  if flag(debug-output)
    GHC-Options: -DDEBUG=1

Executable test-tasks
  Hs-Source-Dirs: .
  Main-Is: Main.hs
  GHC-Options: -threaded
  Build-Depends: base, bytestring, containers, mtl, prettyclass, process, text
  if flag(local-process-listlike)
    Hs-Source-Dirs: ../process-listlike
    Build-Depends: deepseq, ListLike
  else
    Build-depends: tasks, process-listlike >= 1.3
  if flag(debug-output)
    GHC-Options: -DDEBUG=1
