Name:                tasks
Version:             0.2
Synopsis:            Manage a set of processes
License:             BSD3
Author:              David Fox <dsf@seereason.com>
Maintainer:          David Fox <dsf@seereason.com>
Copyright:           2014 David Fox, SeeReason Partners LLC
Category:            System
Build-type:          Simple
Cabal-version:       >=1.9

flag local-process-extras
   Description: Link directly to the source of the process-extras library
   Default: False
   Manual: True

flag debug-output
   Description: Write output that illustrates the message passing
   Default: False
   Manual: True

source-repository head
    type:     darcs
    location: http://src.seereason.com/tasks

Library
  Hs-Source-Dirs:      .
  Exposed-modules:     System.Tasks
                       System.Tasks.Pretty
                       System.Tasks.Types
  Build-depends:       base >= 4 && <5, bytestring, containers, data-default, mtl, prettyclass, process, showplease, text
  if flag(local-process-extras)
    Hs-Source-Dirs: ../process-extras
    Build-Depends: deepseq, ListLike
  else
    Build-depends: process-extras >= 0.2.1
  if flag(debug-output)
    CPP-Options: -DDEBUG=1

Executable test-tasks
  Hs-Source-Dirs: .
  Main-Is: Main.hs
  GHC-Options: -threaded
  Build-Depends: base >= 4, bytestring, containers, data-default, mtl, prettyclass, process, showplease, tasks, text
  if flag(local-process-extras)
    Hs-Source-Dirs: ../process-extras
    Build-Depends: deepseq, ListLike
  else
    Build-depends: tasks, process-extras >= 0.2.1
  if flag(debug-output)
    CPP-Options: -DDEBUG=1
