Name:                tasks
Version:             0.3
Synopsis:            Manage a set of processes
License:             BSD3
Author:              David Fox <dsf@seereason.com>
Maintainer:          David Fox <dsf@seereason.com>
Copyright:           2014 David Fox, SeeReason Partners LLC
Category:            System
Build-type:          Simple
Cabal-version:       >=1.9

flag local-process-extras
   Description: Link directly to the source of the process-extras library
   Default: False
   Manual: True

flag debug-output
   Description: Write output that illustrates the message passing
   Default: False
   Manual: True

source-repository head
    type:     darcs
    location: http://src.seereason.com/tasks

Library
  Hs-Source-Dirs:      .
  Exposed-modules:     System.Tasks
                       System.Tasks.IO
                       System.Tasks.Manager
                       System.Tasks.Pretty
                       System.Tasks.Task
                       System.Tasks.Types
  Build-depends:       async, base >= 4 && <5, bytestring, containers, data-default, exceptions, mtl, prettyclass, process, text
  if flag(local-process-extras)
    Hs-Source-Dirs: ../process-extras/src
    Build-Depends: deepseq, ListLike
    Exposed-Modules:
      System.Process.ByteString
      System.Process.ByteString.Lazy
      System.Process.Chunks
      System.Process.ListLike
      System.Process.ListLike.Classes
      System.Process.ListLike.Instances
      System.Process.ListLike.LazyString
      System.Process.ListLike.Read
      System.Process.ListLike.ReadNoThreads
      System.Process.ListLike.StrictString
      System.Process.String
      System.Process.Text
      System.Process.Text.Lazy
  else
    Build-depends: process-extras >= 0.2.1
  if flag(debug-output)
    CPP-Options: -DDEBUG=1
    Build-depends: showplease

Executable test-tasks
  Hs-Source-Dirs: .
  Main-Is: Main.hs
  GHC-Options: -threaded
  Build-Depends: async, base >= 4, bytestring, containers, data-default, exceptions, mtl, prettyclass, process, tasks, text
  if flag(local-process-extras)
    Hs-Source-Dirs: ../process-extras/src
    Build-Depends: deepseq, ListLike
  else
    Build-depends: tasks, process-extras >= 0.2.1
  if flag(debug-output)
    CPP-Options: -DDEBUG=1
    Build-depends: showplease
